--- a/app/src/main/res/layout/element_device.xml
+++ b/app/src/main/res/layout/element_device.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:paddingBottom="5dp"
-    >
+    android:paddingBottom="5dp">
 
     <ImageView
         android:layout_width="80dp"
@@ -26,17 +24,19 @@
         android:layout_gravity="left|center_vertical"
         android:layout_weight="4"
         android:focusable="false"
+
         android:gravity="left" />
 
-    <Button
-        android:id="@+id/btnConnect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="0"
-        android:clickable="false"
-        android:focusable="false"
-        android:gravity="center"
-        android:text="@string/connect" />
+    <!--FIXME quitado botón "Conectar" ya que pulsando sobre la linea del sensor hace mismo efecto. Quitar si se ve que comprueba que no es necesario-->
+    <!-- <Button
+         android:id="@+id/btnConnect"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center_vertical"
+         android:layout_weight="0"
+         android:clickable="false"
+         android:focusable="false"
+         android:gravity="center"
+         android:text="@string/connect" />-->
 
 </LinearLayout>
